Wed May 28 10:26:48 2003  Owen Taylor  <otaylor@redhat.com>

	* README: Fix typo of ~/.theme for ~/.themes

Tue Apr 22 12:14:16 2003  Owen Taylor  <otaylor@redhat.com>

	* README: Fix 'copy copy' typo.

2003-03-02  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Call AC_LIBTOOL_WIN32_DLL. Set OS_WIN32
	conditional on Windows.

	* makefile.cygwin: Remove, unmaintained and obsolete.

	* Makefile.am (EXTRA_DIST): Remove here, too.

	* README.win32: Update.

Fri Jan 17 19:02:02 2003  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.2.0 ===

	* Makefile.am: Make dist fixes.

	* gtk-engines.spec: Some updates to bring into a
	resemblence of workingness.

	* NEWS: Updated.

Fri Jan 17 18:32:34 2003  Owen Taylor  <otaylor@redhat.com>

	* configure.in Makefile.am gtk-engines-2.pc.in: Patch
	from Seth Nickell to add a .pc file so that things use
	one of the gtk-engines engines can check for it's
	presence.

Thu Oct 31 18:56:56 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Remove some useless checks.
	(Red Hat bugzilla, #64061)

2002-09-12  Havoc Pennington  <hp@redhat.com>

	* notif/Theme/ICON.png, metal/Theme/ICON.png,
	redmond95/Theme/ICON.png: remove apparently pointless old icon
	files

Fri Sep  6 16:40:42 2002  Owen Taylor  <otaylor@redhat.com>

	* README: Added some text describing how to install
	gtk-engines into a different prefix than GTK+.
	(#84727, Piotr Sawuk)

2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

Sun Apr 21 09:52:54 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Version 1.9.0

Sat Jan 19 20:42:11 2002  Owen Taylor  <otaylor@redhat.com>

	* raleigh/**: Remove engine, it's now the GTK+ default.

	* pixmap/**: Remove engine, replaced by pixbuf
