@@ -12,14 +12,31 @@ cd $srcdir
 	echo
 	echo "You must have autoconf installed to compile GTK+."
 	echo "Download the appropriate package for your distribution,"
-	echo "or get the source tarball at ftp://ftp.gnu.org/pub/gnu/"
+	echo "or get the source tarball at http://ftp.gnu.org/gnu/autoconf/"
 	DIE=1
 }
+
+if automake-1.9 --version < /dev/null > /dev/null 2>&1 ; then
+    AUTOMAKE=automake-1.9
+    ACLOCAL=aclocal-1.9
+elif automake-1.8 --version < /dev/null > /dev/null 2>&1 ; then
+    AUTOMAKE=automake-1.8
+    ACLOCAL=aclocal-1.8
+elif automake-1.7 --version < /dev/null > /dev/null 2>&1 ; then
+    AUTOMAKE=automake-1.7
+    ACLOCAL=aclocal-1.7
+else
+        echo
+        echo "You must have automake 1.7.x installed to compile $PROJECT."
+        echo "Install the appropriate package for your distribution,"
+        echo "or get the source tarball at http://ftp.gnu.org/gnu/automake/"
+        DIE=1
+fi
 
 (libtool --version) < /dev/null > /dev/null 2>&1 || {
 	echo
 	echo "You must have libtool installed to compile GTK+."
-	echo "Get ftp://alpha.gnu.org/gnu/libtool-1.0h.tar.gz"
+	echo "Get http://ftp.gnu.org/gnu/libtool/libtool-1.5.10.tar.gz"
 	echo "(or a newer version if it is available)"
 	DIE=1
 }
@@ -34,9 +51,9 @@ fi
 
 libtoolize --force --copy
 
-aclocal-1.4 $ACLOCAL_FLAGS
-automake-1.4 --add-missing
+$ACLOCAL $ACLOCAL_FLAGS
 autoconf
+$AUTOMAKE --add-missing
 cd $THEDIR
 
 $srcdir/configure --enable-maintainer-mode "$@"
