@@ -1,13 +1,14 @@
-AC_INIT(README)
+AC_INIT([gtk-engines], [2.2.0])
+AC_CONFIG_SRCDIR([README])
 # Save this value here, since automake will set cflags later
 cflags_set=${CFLAGS+set}
 
-AM_INIT_AUTOMAKE(gtk-engines, 2.2.0)
+AM_INIT_AUTOMAKE
 
 dnl Initialize maintainer mode
 AM_MAINTAINER_MODE
 
-ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
+AC_SUBST([ACLOCAL_AMFLAGS], [\${ACLOCAL_FLAGS}])
 
 AC_PROG_CC
 AM_PROG_CC_STDC
@@ -44,14 +45,9 @@ PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12,,
                   AC_MSG_ERROR([GTK+-2.0 is required to compile gtk-engines]))
 
 GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
-AC_SUBST(GTK_CFLAGS)
-AC_SUBST(GTK_LIBS)
 AC_SUBST(GTK_VERSION)
 
-# Save ACLOCAL_FLAGS
-ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
-
-AC_OUTPUT([
+AC_CONFIG_FILES([
 gtk-engines.spec
 Makefile
 metal/Makefile
@@ -63,3 +59,5 @@ redmond95/Theme/Makefile
 redmond95/Theme/gtk-2.0/Makefile
 gtk-engines-2.pc
 ])
+
+AC_OUTPUT
